// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeConfirmation should match snapshot when data is loaded successfully 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
    data-component="TradeConfirmation"
    data-element="Grid"
    data-source-file="TradeConfirmation.tsx"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
      data-element="Grid"
      data-source-file="TradeConfirmation.tsx"
    >
      <div
        class="MuiGrid-root makeStyles-container-21 MuiGrid-container MuiGrid-direction-xs-column"
        data-component="PageHeader"
        data-element="Grid"
        data-source-file="PageHeader.tsx"
      >
        <div
          class="MuiGrid-root makeStyles-header-20 MuiGrid-container"
          data-element="Grid"
          data-source-file="PageHeader.tsx"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
            data-element="Grid"
            data-source-file="PageHeader.tsx"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
              data-element="Typography"
              data-source-file="PageHeader.tsx"
            >
              Trade Confirmation
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            data-component="Breadcrumbs"
            data-element="MuiBreadcrumbs"
            data-source-file="Breadcrumbs.tsx"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-23"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
    </div>
    <div
      class="MuiGrid-root makeStyles-wrapper-27 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      data-component="LoadingIndicator"
      data-element="Grid"
      data-source-file="LoadingIndicator.tsx"
      style="opacity: 0.75;"
    >
      <div
        class="MuiBox-root MuiBox-root-28"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiBox-root MuiBox-root-29"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        data-element="CircularProgress"
        data-source-file="LoadingIndicator.tsx"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
      data-element="Grid"
      data-source-file="TradeConfirmation.tsx"
    >
      <div
        class="MuiBox-root MuiBox-root-30"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiPaper-root MuiAccordion-root makeStyles-root-31 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        data-component="ReportsAccordion"
        data-element="Accordion"
        data-source-file="ReportsAccordion.tsx"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root makeStyles-summaryWrapper-32"
          data-element="AccordionSummary"
          data-source-file="ReportsAccordion.tsx"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content makeStyles-summaryContent-33"
          >
            <p
              class="MuiTypography-root makeStyles-summary-34 MuiTypography-body1 MuiTypography-colorPrimary"
              data-element="Typography"
              data-source-file="ReportsAccordion.tsx"
            >
              Trades
            </p>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root makeStyles-detailsWrapper-35"
                  data-element="AccordionDetails"
                  data-source-file="ReportsAccordion.tsx"
                >
                  <div
                    class="MuiTableContainer-root"
                    data-component="TradesTable"
                    data-element="TableContainer"
                    data-source-file="TradesTable.tsx"
                  >
                    <table
                      class="MuiTable-root"
                      data-element="Table"
                      data-source-file="TradesTable.tsx"
                    >
                      <thead
                        class="MuiTableHead-root"
                        data-element="TableHead"
                        data-source-file="TradesTable.tsx"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                          data-element="TableRow"
                          data-source-file="TradesTable.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignLeft"
                            data-testid="cell"
                            scope="col"
                          />
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignLeft"
                            data-testid="cell"
                            scope="col"
                          >
                            Date
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignLeft"
                            data-testid="cell"
                            scope="col"
                          >
                            Type
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignRight"
                            data-testid="cell"
                            scope="col"
                          >
                            Quantity
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignRight"
                            data-testid="cell"
                            scope="col"
                          >
                            Price
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignRight"
                            data-testid="cell"
                            scope="col"
                          >
                            Total
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignRight"
                            data-testid="cell"
                            scope="col"
                          >
                            Fee
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                        data-element="TableBody"
                        data-source-file="TradesTable.tsx"
                      >
                        <tr
                          class="MuiTableRow-root makeStyles-row-41 makeStyles-row-46"
                          data-component="TradesRow"
                          data-element="TableRow"
                          data-source-file="TradesRow.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                            role="cell"
                            scope="row"
                          >
                            Securities Pair
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          />
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-41 makeStyles-row-48"
                          data-component="TradesRow"
                          data-element="TableRow"
                          data-source-file="TradesRow.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                            role="cell"
                            scope="row"
                          >
                            HKUV/SGD
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            2021-05-28, 04:33 AM
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            SELL
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            10
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            10.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            100.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="TradesRow.tsx"
                          >
                            0.00
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TradeConfirmation should match snapshot when data is undefined 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root makeStyles-container-3 MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root makeStyles-header-2 MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Trade Confirmation
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-5"
      />
    </div>
    <div
      class="MuiGrid-root makeStyles-wrapper-9 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      style="opacity: 0.75;"
    >
      <div
        class="MuiBox-root MuiBox-root-10"
      />
      <div
        class="MuiBox-root MuiBox-root-11"
      />
      <div
        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-12"
      />
      <div
        class="MuiGrid-root makeStyles-wrapper-13 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-16"
          />
          <svg
            style="max-width: 100%;"
          >
            no_data.svg
          </svg>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-17"
          />
          <p
            class="MuiTypography-root makeStyles-subtitle-14 MuiTypography-body1"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root MuiBox-root-18"
          />
          <p
            class="MuiTypography-root makeStyles-content-15 MuiTypography-body1"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root MuiBox-root-19"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TradeConfirmation should match snapshot when data length is 0 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root makeStyles-container-52 MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root makeStyles-header-51 MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Trade Confirmation
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-54"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-58"
      />
      <div
        class="MuiGrid-root makeStyles-wrapper-59 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-62"
          />
          <svg
            style="max-width: 100%;"
          >
            no_data.svg
          </svg>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-63"
          />
          <p
            class="MuiTypography-root makeStyles-subtitle-60 MuiTypography-body1"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root MuiBox-root-64"
          />
          <p
            class="MuiTypography-root makeStyles-content-61 MuiTypography-body1"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root MuiBox-root-65"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
